--- a/piDisplay/Base.lproj/Main.storyboard
+++ b/piDisplay/Base.lproj/Main.storyboard
@@ -240,7 +240,7 @@
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGJ-kW-HXs">
                                         <rect key="frame" x="8" y="38" width="244.5" height="134"/>
-                                        <string key="text">This app has only been tested with the official 7" display from the rPi Foundation.  The server-side software on pi has only been tested on Raspbian Stretch.</string>
+                                        <string key="text">This app has only been tested with the official 7" display from the rPi Foundation.  The server-side software on pi has only been tested on Raspbian Stretch with a pi3B+</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -293,11 +293,18 @@
                                             <action selector="rpibacklightGit:" destination="yrP-SZ-Ei5" eventType="touchUpInside" id="I47-SV-NDM"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T6g-d7-9JQ">
+                                        <rect key="frame" x="8" y="9" width="43" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.94204897911353414" green="1" blue="0.71845374681426344" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="7m3-Wv-sIr" firstAttribute="top" secondItem="Rha-do-MBS" secondAttribute="top" id="16q-ut-5eI"/>
                                     <constraint firstItem="9Pb-Mn-N7P" firstAttribute="leading" secondItem="GXc-HA-7MP" secondAttribute="leading" id="7Gy-9e-TrA"/>
+                                    <constraint firstItem="T6g-d7-9JQ" firstAttribute="centerY" secondItem="7m3-Wv-sIr" secondAttribute="centerY" id="9a8-sJ-Wqe"/>
                                     <constraint firstItem="htS-Hx-Gxn" firstAttribute="leading" secondItem="QGJ-kW-HXs" secondAttribute="leading" id="AT9-In-kc3"/>
                                     <constraint firstItem="379-yB-0pQ" firstAttribute="top" secondItem="htS-Hx-Gxn" secondAttribute="bottom" id="FLr-WG-0Nx"/>
                                     <constraint firstItem="9bt-jH-ivc" firstAttribute="trailing" secondItem="htS-Hx-Gxn" secondAttribute="trailing" id="FpH-QD-uRt"/>
@@ -307,6 +314,7 @@
                                     <constraint firstItem="QGJ-kW-HXs" firstAttribute="leading" secondItem="Rha-do-MBS" secondAttribute="leading" constant="8" id="PM9-VA-FJ8"/>
                                     <constraint firstItem="9bt-jH-ivc" firstAttribute="leading" secondItem="htS-Hx-Gxn" secondAttribute="leading" id="Pid-O5-KKR"/>
                                     <constraint firstItem="8AP-4g-rv6" firstAttribute="top" secondItem="QGJ-kW-HXs" secondAttribute="bottom" id="RBb-H2-V1J"/>
+                                    <constraint firstItem="T6g-d7-9JQ" firstAttribute="top" secondItem="Rha-do-MBS" secondAttribute="top" constant="9" id="UR9-fk-aQW"/>
                                     <constraint firstItem="JHx-4i-2fT" firstAttribute="centerX" secondItem="9bt-jH-ivc" secondAttribute="centerX" id="YJq-gU-0mW"/>
                                     <constraint firstAttribute="trailing" secondItem="QGJ-kW-HXs" secondAttribute="trailing" id="YRq-X4-5Ef"/>
                                     <constraint firstItem="379-yB-0pQ" firstAttribute="leading" secondItem="GXc-HA-7MP" secondAttribute="leading" constant="-15" id="akW-UE-wSZ"/>
@@ -314,6 +322,7 @@
                                     <constraint firstAttribute="trailing" secondItem="8AP-4g-rv6" secondAttribute="trailing" constant="15" id="bW0-I7-kgf"/>
                                     <constraint firstItem="7m3-Wv-sIr" firstAttribute="trailing" secondItem="Rha-do-MBS" secondAttribute="trailing" constant="-2" id="dUM-9H-kE8"/>
                                     <constraint firstItem="htS-Hx-Gxn" firstAttribute="trailing" secondItem="QGJ-kW-HXs" secondAttribute="trailing" id="gGF-S8-d3v"/>
+                                    <constraint firstItem="T6g-d7-9JQ" firstAttribute="leading" secondItem="QGJ-kW-HXs" secondAttribute="leading" id="iH9-Tv-Cr9"/>
                                     <constraint firstItem="GXc-HA-7MP" firstAttribute="centerX" secondItem="379-yB-0pQ" secondAttribute="centerX" constant="15" id="kTG-7E-0Wl"/>
                                     <constraint firstItem="QGJ-kW-HXs" firstAttribute="top" secondItem="7m3-Wv-sIr" secondAttribute="bottom" id="kYP-JM-go0"/>
                                     <constraint firstItem="379-yB-0pQ" firstAttribute="leading" secondItem="htS-Hx-Gxn" secondAttribute="leading" constant="-15" id="km4-dG-Clt"/>
@@ -336,6 +345,7 @@
                         <outlet property="closeButtonPane" destination="7m3-Wv-sIr" id="C1Z-yj-g0O"/>
                         <outlet property="installRpiButton" destination="8AP-4g-rv6" id="7GR-1j-Lme"/>
                         <outlet property="settingsPane" destination="Rha-do-MBS" id="J5v-Pr-Y28"/>
+                        <outlet property="versionLabel" destination="T6g-d7-9JQ" id="OpT-lR-tf4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xX5-5X-tkO" userLabel="First Responder" sceneMemberID="firstResponder"/>
